@@ -1,5 +1,8 @@
 --- Version 0.1.4 ---
 - mve support :-)
+- Lots of portability fixes
+- OS X support!
+- Other bigendian linux/unix support?
 
 --- Version 0.1.3 ---
 - deb and rpm support added
